--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ Author URI:http://www.htmlcoder.me
 Version:1.0.0
 Created:November 2014
 License:Creative Commons Attribution 3.0 License (https://creativecommons.org/licenses/by/3.0/)
-File Description:Main CSS file of the template */
+File Description:Main CSS file of the template 
+modify dikit
+*/
 
 /* Typography
 ----------------------------------------------------------------------------- */
